Fixed extra padding on sign in page

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ input[type="submit"]:hover{
 }
 
 form.flex_column {
-    height: 80%;
+    height: auto;
     width: 80%;
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
